k8s/staging/explorer-ui/testnet/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-ui-testnet-service-external
  namespace: chicmoz-staging
spec:
  type: NodePort
  selector:
    app: explorer-ui-testnet-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30880
