k8s/staging/explorer-ui/testnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-explorer-ui-testnet
  namespace: chicmoz-staging
  annotations:
    cert-manager.io/cluster-issuer: "aztecscan-issuer-staging"
spec:
  ingressClassName: nginx
  tls:
    - secretName: aztecscan-ui-tls-testnet
      hosts:
        - staging.aztecscan.xyz
        - staging-testnet.aztecscan.xyz
  rules:
    - host: staging.aztecscan.xyz
      http:
        paths:
          - backend:
              service:
                name: explorer-ui-testnet-service
                port:
                  name: http-app
            path: /
            pathType: Prefix
    - host: staging-testnet.aztecscan.xyz
      http:
        paths:
          - backend:
              service:
                name: explorer-ui-testnet-service
                port:
                  name: http-app
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
